fixing some layout issues in mobile view

--- a/src/app/books/books.component.css
+++ b/src/app/books/books.component.css
@@ -72,3 +72,12 @@ button.delete {
   color: white;
 }
 
+.bookCover {
+  height: 412px;
+}
+
+@media only screen and (max-width: 600px) {
+  .bookCover {
+    height: 300px !important;
+  }
+}
