--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
 @media only screen and (max-width: 600px) {
   .container {
-    width: 70% !important;
+    width: 90% !important;
   }
 }
 @media only screen and (min-width: 993px) {
